--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,8 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web');
 
 body {
-  margin: 0px;
-  padding: 0px;
+  font-family: 'Titillium Web', sans-serif;
+  color: white;
+  height: 100%;
+  background-color: #282e37;
 }
 html {
   font-family: 'Titillium Web', sans-serif;
@@ -11,6 +13,81 @@ html {
 
 h1 {
   margin: 0px;
+}
+
+/* Text */
+.title {
+  text-align: center;
+  font-size: 50px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+}
+
+.display-3 {
+  font-size: 100px;
+}
+
+.display-4 {
+  font-size: 40px;
+}
+
+.lead {
+  font-size: 30px;
+  text-align: center;
+}
+
+/* Buttons */
+.btn {
+  border-radius: 10px;
+  border: none;
+}
+.btn-1 {
+  background-color: #0bb4e0;
+  margin: 5px 0px;
+}
+
+.btn {
+  padding: 10px 15px;
+  font-size: 20px;
+  color: white;
+}
+
+.btn:hover {
+  cursor: pointer;
+  color: black;
+}
+
+.btn-2 {
+  background-color: #66bb75;
+  margin: 20px 0px 0px 0px;
+}
+
+.btn-3 {
+  background-color: #d43326;
+  margin: 5px;
+}
+
+.btn-4 {
+  background-color: #9b90d9;
+  margin: 5px;
+}
+
+.btn-5 {
+  background-color: #65c8ce;
+  margin: 20px 0px 0px 0px;
+}
+
+/* Positioning */
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 /* Navigation */
@@ -21,26 +98,25 @@ h1 {
 }
 
 /* Index Page */
-#popular-questions-label {
-  text-shadow: 2px 2px black;
-  color: white;
-  font-weight: 800;
-}
 
 #learn-more-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
   background-color: #282e37;
-  padding: 30px;
+  padding: 100px;
   margin: 0px;
 }
 
 #learn-more-container > h1 {
-  border-bottom: 2px solid #0bb4e0;
+  font-size: 45px;
 }
 #learn-more-container > p {
   font-size: 25px;
-  line-height: 35px;
+  margin: 50px;
   text-align: center;
-  padding: 10px 0px;
 }
 
 .jumbotron-label {
@@ -59,14 +135,6 @@ h1 {
   background-image: url('../images/cover.png');
   background-position: center;
   background-size: cover;
-  height: 800px;
-}
-
-#popular-questions {
-  padding: 0px;
-  margin: 0px;
-  overflow: hidden;
-  overflow-y: scroll;
 }
 
 .question-card {
@@ -76,30 +144,11 @@ h1 {
   transition-property: box-shadow;
   transition-duration: 0.1s;
   transition-timing-function: linear;
-}
-
-.question-card:hover {
-  box-shadow: 0px 0px 25px white;
-}
-
-.username {
-  text-align: center;
-  background-color: black;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  font-size: 30px;
-  padding: 26px 10px;
-  word-break: break-all;
-  border-right: 5px solid #0bb4e0;
-  color: white;
-  transition-property: background-color;
-  transition-duration: 0.1s;
-  transition-timing-function: linear;
+  padding: 15px;
 }
 
 .username-logged-in:hover {
   cursor: pointer;
-  background-color: #1f1f1f;
 }
 
 .question {
@@ -107,4 +156,42 @@ h1 {
   text-align: center;
   padding: 10px 5px;
   color: black;
+}
+
+/* Authentication Pages */
+.form-group {
+  margin: 25px;
+}
+
+.form-control {
+  margin-left: 25px;
+  border-radius: 5px;
+  height: 30px;
+  width: 400px;
+  padding: 10px;
+}
+.authentication-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-start;
+  width: 800px;
+  padding-top: 100px;
+  padding-left: 50px;
+}
+
+.authentication-box * label {
+  font-size: 25px;
+}
+
+.authentication-box * input {
+  font-size: 22px;
+}
+
+.error {
+  color: $primary-red !important;
+}
+
+.success {
+  color: $primary-green;
 }
