--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -77,6 +77,15 @@ h1 {
   margin: 20px 0px 0px 0px;
 }
 
+/* Error/Success Handling */
+.error {
+  color: #d43326 !important;
+}
+
+.success {
+  color: #66bb75;
+}
+
 /* Positioning */
 .flex-center {
   display: flex;
@@ -141,13 +150,30 @@ h1 {
   background-color: #daeefb;
   margin: 30px;
   border-radius: 10px;
+  padding: 15px 45px;
+  display: flex;
+}
+
+.username-logged-in {
+  text-decoration: none;
+  font-style: italic;
+  font-size: 25px;
+  color: #08224c;
+  background-color: #e7fefd;
+  border-radius: 15px;
+  padding: 0px 15px;
+  margin: 0px 15px 0px 0px;
+  text-align: center;
   transition-property: box-shadow;
   transition-duration: 0.1s;
   transition-timing-function: linear;
-  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .username-logged-in:hover {
+  box-shadow: 0px 0px 50px turquoise;
   cursor: pointer;
 }
 
