--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@ body {
   color: white;
   height: 100%;
   background-color: #282e37;
+  margin: 0px;
 }
 html {
   font-family: 'Titillium Web', sans-serif;
@@ -13,6 +14,18 @@ html {
 
 h1 {
   margin: 0px;
+}
+
+input:focus {
+  outline: none;
+}
+
+input {
+  border: none;
+}
+
+ul {
+  list-style-type: none;
 }
 
 /* Text */
@@ -50,6 +63,10 @@ h1 {
   padding: 10px 15px;
   font-size: 20px;
   color: white;
+}
+
+.btn:focus {
+  outline: 0;
 }
 
 .btn:hover {
@@ -214,10 +231,110 @@ h1 {
   font-size: 22px;
 }
 
-.error {
-  color: $primary-red !important;
+/* Question Banks Page */
+.search-banks {
+  width: 250px;
+  border-radius: 5px;
+  font-size: 25px;
+  padding: 5px 15px;
 }
 
-.success {
-  color: $primary-green;
+.question-banks-container {
+  margin: 50px 200px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.question-bank-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #595e6b;
+  padding: 30px;
+  margin: 55px 5px 30px 5px;
+  border-radius: 10px;
+  width: 70%;
+  min-width: 400px;
+}
+
+.question-banks-header {
+  width: 70%;
+  min-width: 400px;
+}
+
+.question-bank-label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.question-bank-label > .title {
+  font-size: 40px;
+  padding: 0px;
+}
+
+.question-bank-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.edit-title {
+  font-size: 30px;
+  text-align: center;
+  float: center;
+}
+
+.question-bank-questions-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.remove-question-bank {
+}
+
+.remove-question {
+  float: right;
+  margin: 0px;
+  color: black;
+  font-weight: bolder;
+}
+
+.question-bank-questions {
+  padding: 0px;
+}
+
+.question-bank-questions > li {
+  font-size: 25px;
+  color: #282e37;
+}
+
+.list-group-item {
+  word-break: break-all;
+  transition-property: background-color;
+  transition-duration: 0.1s;
+  transition-timing-function: linear;
+  background-color: white;
+  padding: 15px;
+  border: 1px solid black;
+}
+
+.list-group-item:hover {
+  background-color: #ebf9fe;
+}
+
+.add-question {
+  font-size: 25px;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.last-updated {
+  margin: 20px 10px 0px 10px;
+  text-align: center;
+  font-size: 20px;
+  font-style: italic;
 }
